// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`e2e additionalFiles match snapshot 1`] = `
"]
}  
\\"n\\\\.ERAWTFOS EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOSn\\\\EHT HTIW NOITCENNOC NI RO FO TUO ,MORF GNISIRA ,ESIWREHTO RO TROTn\\\\,TCARTNOC FO NOITCA NA NI REHTEHW ,YTILIBAIL REHTO RO SEGAMAD ,MIALCn\\\\YNA ROF ELBAIL EB SREDLOH THGIRYPOC RO SROHTUA EHT LLAHS TNEVE ON NIn\\\\.TNEMEGNIRFNINON DNA ESOPRUP RALUCITRAP A ROF SSENTIF ,YTILIBATNAHCREMn\\\\FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMI RO SSERPXEn\\\\,DNIK YNA FO YTNARRAW TUOHTIW ,'SI SA' DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipoc lla ni dedulcnin\\\\eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof ehtn\\\\ot tcejbus ,os od ot dehsinruf si erawtfoS eht mohw ot snosrep timrepn\\\\ot dna ,erawtfoS eht fo seipoc lles ro/dna ,esnecilbus ,etubirtsidn\\\\,hsilbup ,egrem ,yfidom ,ypoc ,esu ot sthgir eht noitatimil tuohtiwn\\\\gnidulcni ,noitcirtser tuohtiw erawtfoS eht ni laed ot ,)'erawtfoS'n\\\\eht( selif noitatnemucod detaicossa dna erawtfos siht fo ypoc an\\\\gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\srotubirtnoc rehto dna noitadnuoF SJ thgirypoC\\" :\\"txeTesnecil\\"    
,\\"TIM\\" :\\"esnecil\\"    
,\\"zgt.3.61.4-kcapbew/-/kcapbew/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,\\"kcapbew/kcapbew/moc.buhtig//:sptth\\" :\\"yrotisoper\\"    
,\\"arkos@ sreppoK saiboT\\" :\\"rohtua\\"    
,\\"3.61.4\\" :\\"noisrev\\"    
,\\"kcapbew\\" :\\"eman\\"    
{  
,}  
\\"n\\\\.ERAWTFOS EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOSn\\\\EHT HTIW NOITCENNOC NI RO FO TUO ,MORF GNISIRA ,ESIWREHTO RO TROTn\\\\,TCARTNOC FO NOITCA NA NI REHTEHW ,YTILIBAIL REHTO RO SEGAMAD ,MIALCn\\\\YNA ROF ELBAIL EB SREDLOH THGIRYPOC RO SROHTUA EHT LLAHS TNEVE ON NIn\\\\.TNEMEGNIRFNINON DNA ESOPRUP RALUCITRAP A ROF SSENTIF ,YTILIBATNAHCREMn\\\\FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMI RO SSERPXEn\\\\,DNIK YNA FO YTNARRAW TUOHTIW ,\\"\\\\SI SA\\"\\\\ DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipoc lla nin\\\\dedulcni eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof ehtn\\\\ot tcejbus ,os od ot dehsinruf si erawtfoS eht mohw ot snosrep timrepn\\\\ot dna ,erawtfoS eht fo seipoc lles ro/dna ,esnecilbus ,etubirtsidn\\\\,hsilbup ,egrem ,yfidom ,ypoc ,esu ot sthgir eht noitatimil tuohtiwn\\\\gnidulcni ,noitcirtser tuohtiw erawtfoS eht ni laed ot ,)\\"\\\\erawtfoS\\"\\\\n\\\\eht( selif noitatnemucod detaicossa dna erawtfos siht fo ypoc an\\\\gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\SROHTUA ni detsil srohtua rehto & llehctiM .E elyK 5102 )c( thgirypoCn\\\\n\\\\esneciL TIM ehT\\" :\\"txeTesnecil\\"    
,\\")0.3-YB-CC DNA TIM(\\" :\\"esnecil\\"    
,\\"zgt.4.0.1-esrap-noisserpxe-xdps/-/esrap-noisserpxe-xdps/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,llun :\\"yrotisoper\\"    
,\\")moc.llehctimek//:ptth( >moc.llehctimek@elyk< llehctiM .E elyK\\" :\\"rohtua\\"    
,\\"4.0.1\\" :\\"noisrev\\"    
,\\"esrap-noisserpxe-xdps\\" :\\"eman\\"    
{  
,}  
\\"n\\\\.ERAWTFOS EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOSn\\\\EHT HTIW NOITCENNOC NI RO FO TUO ,MORF GNISIRA ,ESIWREHTO RO TROTn\\\\,TCARTNOC FO NOITCA NA NI REHTEHW ,YTILIBAIL REHTO RO SEGAMAD ,MIALCn\\\\YNA ROF ELBAIL EB SREDLOH THGIRYPOC RO SROHTUA EHT LLAHS TNEVE ON NIn\\\\.TNEMEGNIRFNINON DNA ESOPRUP RALUCITRAP A ROF SSENTIF ,YTILIBATNAHCREMn\\\\FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMI RO SSERPXEn\\\\,DNIK YNA FO YTNARRAW TUOHTIW ,\\"\\\\SI SA\\"\\\\ DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipoc lla nin\\\\dedulcni eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof ehtn\\\\ot tcejbus ,os od ot dehsinruf si erawtfoS eht mohw ot snosrep timrepn\\\\ot dna ,erawtfoS eht fo seipoc lles ro/dna ,esnecilbus ,etubirtsidn\\\\,hsilbup ,egrem ,yfidom ,ypoc ,esu ot sthgir eht noitatimil tuohtiwn\\\\gnidulcni ,noitcirtser tuohtiw erawtfoS eht ni laed ot ,)\\"\\\\erawtfoS\\"\\\\n\\\\eht( selif noitatnemucod detaicossa dna erawtfos siht fo ypoc an\\\\gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\llehctiM .E elyK 5102 )c( thgirypoCn\\\\n\\\\esneciL TIM ehT\\" :\\"txeTesnecil\\"    
,\\")0.3-YB-CC DNA TIM(\\" :\\"esnecil\\"    
,\\"zgt.2.0.1-etadilav-noisserpxe-xdps/-/etadilav-noisserpxe-xdps/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,llun :\\"yrotisoper\\"    
,\\")moc.llehctimek//:ptth( >moc.llehctimek@elyk< llehctiM .E elyK\\" :\\"rohtua\\"    
,\\"2.0.1\\" :\\"noisrev\\"    
,\\"etadilav-noisserpxe-xdps\\" :\\"eman\\"    
{  
,}  
\\"n\\\\.ERAWTFOSn\\\\EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOS EHT HTIW NOITCENNOC NI RO FO TUOn\\\\,MORF GNISIRA ,ESIWREHTO RO TROT ,TCARTNOC FO NOITCA NA NI REHTEHW ,YTILIBAILn\\\\REHTO RO SEGAMAD ,MIALC YNA ROF ELBAIL EB SREDLOH THGIRYPOC RO SROHTUAn\\\\EHT LLAHS TNEVE ON NI .TNEMEGNIRFNINON DNA ESOPRUP RALUCITRAP A ROF SSENTIFn\\\\,YTILIBATNAHCREM FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMIn\\\\RO SSERPXE ,DNIK YNA FO YTNARRAW TUOHTIW ,\\"\\\\SI SA\\"\\\\ DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipocn\\\\lla ni dedulcni eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof eht ot tcejbus ,os od ot dehsinrufn\\\\si erawtfoS eht mohw ot snosrep timrep ot dna ,erawtfoS eht fo seipocn\\\\lles ro/dna ,esnecilbus ,etubirtsid ,hsilbup ,egrem ,yfidom ,ypoc ,esu otn\\\\sthgir eht noitatimil tuohtiw gnidulcni ,noitcirtser tuohtiw erawtfoS eht nin\\\\laed ot ,)\\"\\\\erawtfoS\\"\\\\ eht( selif noitatnemucod detaicossa dna erawtfos siht fon\\\\ypoc a gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\nahcoK natloZ 7102 )c( thgirypoCn\\\\n\\\\esneciL TIM\\" :\\"txeTesnecil\\"    
,\\"TIM\\" :\\"esnecil\\"    
,\\"zgt.0.0.1-lru-yrtsiger-ezilamron/-/lru-yrtsiger-ezilamron/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,\\"lru-yrtsiger-ezilamron/mpnp/moc.buhtig//:sptth\\" :\\"yrotisoper\\"    
,\\"nahcoK natloZ\\" :\\"rohtua\\"    
,\\"0.0.1\\" :\\"noisrev\\"    
,\\"lru-yrtsiger-ezilamron\\" :\\"eman\\"    
{  
,}  
\\"n\\\\.evoba smretn\\\\eht morf reffid yam smret rieht sa ,meht daer uoy dnemmocer ew ;sesneciln\\\\nwo rieht evah hcihw erawtfos siht yb desu seirarbil deniatniamn\\\\yllanretxe era seirotcerid rodnev dna seludom_edon eht ni detacol seliFn\\\\n\\\\====n\\\\n\\\\/0.1/orez/niamodcilbup/gro.snommocevitaerc//:ptth :0CCn\\\\n\\\\.noitatnemucodn\\\\eht fo esorp eht nihtiw deyalpsid edoc ecruos lla sa denifed si edocn\\\\elpmaS .0CC aiv deviaw era edoc elpmas rof sthgir detaler dna thgirypoCn\\\\n\\\\====n\\\\n\\\\.ERAWTFOS EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOS EHT HTIWn\\\\NOITCENNOC NI RO FO TUO ,MORF GNISIRA ,ESIWREHTO RO TROT ,TCARTNOC FOn\\\\NOITCA NA NI REHTEHW ,YTILIBAIL REHTO RO SEGAMAD ,MIALC YNA ROF ELBAILn\\\\EB SREDLOH THGIRYPOC RO SROHTUA EHT LLAHS TNEVE ON NI .TNEMEGNIRFNINONn\\\\DNA ESOPRUP RALUCITRAP A ROF SSENTIF ,YTILIBATNAHCREMn\\\\FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMI RO SSERPXEn\\\\,DNIK YNA FO YTNARRAW TUOHTIW ,\\"\\\\SI SA\\"\\\\ DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipoc lla ni dedulcnin\\\\eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof ehtn\\\\ot tcejbus ,os od ot dehsinruf si erawtfoS eht mohw ot snosrep timrepn\\\\ot dna ,erawtfoS eht fo seipoc lles ro/dna ,esnecilbus ,etubirtsidn\\\\,hsilbup ,egrem ,yfidom ,ypoc ,esu ot sthgir eht noitatimil tuohtiwn\\\\gnidulcni ,noitcirtser tuohtiw erawtfoS eht ni laed ot ,)\\"\\\\erawtfoS\\"\\\\n\\\\eht( selif noitatnemucod detaicossa dna erawtfos siht fo ypoc an\\\\gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\====n\\\\n\\\\:woleb detnemucodn\\\\sa tpecxe erawtfos siht fo strap lla ot seilppa esnecil gniwollof ehTn\\\\n\\\\hsadol/hsadol/moc.buhtig//:sptth ta elbaliavan\\\\yrotsih noisiver eht ees ,yrotsih noitubirtnoc tcaxe roF .slaudividnin\\\\ynam yb edam snoitubirtnoc yratnulov fo stsisnoc erawtfos sihTn\\\\n\\\\>/gro.sjerocsrednu//:ptth< srotidE & sretropeR evitagitsevnI dna duolCtnemucoDn\\\\,sanekhsA ymereJ thgirypoc ,sj.erocsrednU no desaBn\\\\n\\\\>/noitadnuof.sj//:sptth< srotubirtnoc rehto dna noitadnuoF SJ thgirypoC\\" :\\"txeTesnecil\\"    
,\\"TIM\\" :\\"esnecil\\"    
,\\"zgt.01.71.4-hsadol/-/hsadol/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,llun :\\"yrotisoper\\"    
,\\")/moc.teelnacuoylla//:ptth( >moc.liamg@notlad.divad.nhoj< notlaD divaD-nhoJ\\" :\\"rohtua\\"    
,\\"01.71.4\\" :\\"noisrev\\"    
,\\"hsadol\\" :\\"eman\\"    
{  
,}  
\\"n\\\\.ERAWTFOSn\\\\EHT NI SGNILAED REHTO RO ESU EHT RO ERAWTFOS EHT HTIW NOITCENNOC NI RO FO TUOn\\\\,MORF GNISIRA ,ESIWREHTO RO TROT ,TCARTNOC FO NOITCA NA NI REHTEHW ,YTILIBAILn\\\\REHTO RO SEGAMAD ,MIALC YNA ROF ELBAIL EB SREDLOH THGIRYPOC RO SROHTUAn\\\\EHT LLAHS TNEVE ON NI .TNEMEGNIRFNINON DNA ESOPRUP RALUCITRAP A ROF SSENTIFn\\\\,YTILIBATNAHCREM FO SEITNARRAW EHT OT DETIMIL TON TUB GNIDULCNI ,DEILPMIn\\\\RO SSERPXE ,DNIK YNA FO YTNARRAW TUOHTIW ,\\"\\\\SI SA\\"\\\\ DEDIVORP SI ERAWTFOS EHTn\\\\n\\\\.erawtfoS eht fo snoitrop laitnatsbus ro seipocn\\\\lla ni dedulcni eb llahs eciton noissimrep siht dna eciton thgirypoc evoba ehTn\\\\n\\\\:snoitidnoc gniwollof eht ot tcejbus ,os od ot dehsinrufn\\\\si erawtfoS eht mohw ot snosrep timrep ot dna ,erawtfoS eht fo seipocn\\\\lles ro/dna ,esnecilbus ,etubirtsid ,hsilbup ,egrem ,yfidom ,ypoc ,esu otn\\\\sthgir eht noitatimil tuohtiw gnidulcni ,noitcirtser tuohtiw erawtfoS eht nin\\\\laed ot ,)\\"\\\\erawtfoS\\"\\\\ eht( selif noitatnemucod detaicossa dna erawtfos siht fon\\\\ypoc a gniniatbo nosrep yna ot ,egrahc fo eerf ,detnarg ybereh si noissimrePn\\\\n\\\\nahcoK natloZ 8102-7102 )c( thgirypoCn\\\\n\\\\esneciL TIM\\" :\\"txeTesnecil\\"    
,\\"TIM\\" :\\"esnecil\\"    
,\\"zgt.1.0.2-lru-llabrat-mpn-teg/-/lru-llabrat-mpn-teg/gro.sjmpn.yrtsiger//:sptth\\" :\\"ecruos\\"    
,\\"lru-llabrat-mpn-teg/mpnp/moc.buhtig//:sptth\\" :\\"yrotisoper\\"    
,\\")/oi.nahcok.www//:sptth( >oi.nahcok@z< nahcoK natloZ\\" :\\"rohtua\\"    
,\\"1.0.2\\" :\\"noisrev\\"    
,\\"lru-llabrat-mpn-teg\\" :\\"eman\\"    
{  
["
`;

exports[`e2e output matches snapshot 1`] = `
Array [
  Object {
    "author": "Zoltan Kochan <z@kochan.io> (https://www.kochan.io/)",
    "license": "MIT",
    "licenseText": "MIT License

Copyright (c) 2017-2018 Zoltan Kochan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
",
    "name": "get-npm-tarball-url",
    "repository": "https://github.com/pnpm/get-npm-tarball-url",
    "source": "https://registry.npmjs.org/get-npm-tarball-url/-/get-npm-tarball-url-2.0.1.tgz",
    "version": "2.0.1",
  },
  Object {
    "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
    "license": "MIT",
    "licenseText": "Copyright JS Foundation and other contributors <https://js.foundation/>

Based on Underscore.js, copyright Jeremy Ashkenas,
DocumentCloud and Investigative Reporters & Editors <http://underscorejs.org/>

This software consists of voluntary contributions made by many
individuals. For exact contribution history, see the revision history
available at https://github.com/lodash/lodash

The following license applies to all parts of this software except as
documented below:

====

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

====

Copyright and related rights for sample code are waived via CC0. Sample
code is defined as all source code displayed within the prose of the
documentation.

CC0: http://creativecommons.org/publicdomain/zero/1.0/

====

Files located in the node_modules and vendor directories are externally
maintained libraries used by this software which have their own
licenses; we recommend you read them, as their terms may differ from the
terms above.
",
    "name": "lodash",
    "repository": null,
    "source": "https://registry.npmjs.org/lodash/-/lodash-4.17.10.tgz",
    "version": "4.17.10",
  },
  Object {
    "author": "Zoltan Kochan",
    "license": "MIT",
    "licenseText": "MIT License

Copyright (c) 2017 Zoltan Kochan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
",
    "name": "normalize-registry-url",
    "repository": "https://github.com/pnpm/normalize-registry-url",
    "source": "https://registry.npmjs.org/normalize-registry-url/-/normalize-registry-url-1.0.0.tgz",
    "version": "1.0.0",
  },
  Object {
    "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
    "license": "(MIT AND CC-BY-3.0)",
    "licenseText": "The MIT License

Copyright (c) 2015 Kyle E. Mitchell

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "spdx-expression-validate",
    "repository": null,
    "source": "https://registry.npmjs.org/spdx-expression-validate/-/spdx-expression-validate-1.0.2.tgz",
    "version": "1.0.2",
  },
  Object {
    "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
    "license": "Apache-2.0",
    "licenseText": "The MIT License

Copyright (c) 2015 Kyle E. Mitchell & other authors listed in AUTHORS

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "spdx-expression-parse",
    "repository": null,
    "source": "https://registry.npmjs.org/spdx-expression-parse/-/spdx-expression-parse-1.0.4.tgz",
    "version": "1.0.4",
  },
  Object {
    "author": "Tobias Koppers @sokra",
    "license": "MIT",
    "licenseText": "Copyright JS Foundation and other contributors

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
'Software'), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "webpack",
    "repository": "https://github.com/webpack/webpack",
    "source": "https://registry.npmjs.org/webpack/-/webpack-4.16.3.tgz",
    "version": "4.16.3",
  },
]
`;

exports[`e2e output to a different outputFilename matches snapshot 1`] = `
Array [
  Object {
    "author": "Zoltan Kochan <z@kochan.io> (https://www.kochan.io/)",
    "license": "MIT",
    "licenseText": "MIT License

Copyright (c) 2017-2018 Zoltan Kochan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
",
    "name": "get-npm-tarball-url",
    "repository": "https://github.com/pnpm/get-npm-tarball-url",
    "source": "https://registry.npmjs.org/get-npm-tarball-url/-/get-npm-tarball-url-2.0.1.tgz",
    "version": "2.0.1",
  },
  Object {
    "author": "John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)",
    "license": "MIT",
    "licenseText": "Copyright JS Foundation and other contributors <https://js.foundation/>

Based on Underscore.js, copyright Jeremy Ashkenas,
DocumentCloud and Investigative Reporters & Editors <http://underscorejs.org/>

This software consists of voluntary contributions made by many
individuals. For exact contribution history, see the revision history
available at https://github.com/lodash/lodash

The following license applies to all parts of this software except as
documented below:

====

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

====

Copyright and related rights for sample code are waived via CC0. Sample
code is defined as all source code displayed within the prose of the
documentation.

CC0: http://creativecommons.org/publicdomain/zero/1.0/

====

Files located in the node_modules and vendor directories are externally
maintained libraries used by this software which have their own
licenses; we recommend you read them, as their terms may differ from the
terms above.
",
    "name": "lodash",
    "repository": null,
    "source": "https://registry.npmjs.org/lodash/-/lodash-4.17.10.tgz",
    "version": "4.17.10",
  },
  Object {
    "author": "Zoltan Kochan",
    "license": "MIT",
    "licenseText": "MIT License

Copyright (c) 2017 Zoltan Kochan

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
",
    "name": "normalize-registry-url",
    "repository": "https://github.com/pnpm/normalize-registry-url",
    "source": "https://registry.npmjs.org/normalize-registry-url/-/normalize-registry-url-1.0.0.tgz",
    "version": "1.0.0",
  },
  Object {
    "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
    "license": "(MIT AND CC-BY-3.0)",
    "licenseText": "The MIT License

Copyright (c) 2015 Kyle E. Mitchell

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "spdx-expression-validate",
    "repository": null,
    "source": "https://registry.npmjs.org/spdx-expression-validate/-/spdx-expression-validate-1.0.2.tgz",
    "version": "1.0.2",
  },
  Object {
    "author": "Kyle E. Mitchell <kyle@kemitchell.com> (http://kemitchell.com)",
    "license": "(MIT AND CC-BY-3.0)",
    "licenseText": "The MIT License

Copyright (c) 2015 Kyle E. Mitchell & other authors listed in AUTHORS

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
\\"Software\\"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "spdx-expression-parse",
    "repository": null,
    "source": "https://registry.npmjs.org/spdx-expression-parse/-/spdx-expression-parse-1.0.4.tgz",
    "version": "1.0.4",
  },
  Object {
    "author": "Tobias Koppers @sokra",
    "license": "MIT",
    "licenseText": "Copyright JS Foundation and other contributors

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
'Software'), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
",
    "name": "webpack",
    "repository": "https://github.com/webpack/webpack",
    "source": "https://registry.npmjs.org/webpack/-/webpack-4.16.3.tgz",
    "version": "4.16.3",
  },
]
`;
